@@ -1,1 +1,1 @@
-    <a href="$FILEURL"><img alt="$FILE - $DATE" src="$SRC"></a>
+    <a href="$FILEURL"><img alt="$FILE - $DATE" src="$SRC" width="$WIDTH" height="$HEIGHT"></a>
